正規表現説明追加

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                     </p>
                 </div>
         </div>
-        <div>
         <div class="matchbox">
             <p>正規表現を入力：</p>
             <p>
@@ -30,6 +29,270 @@
         </div>
        </form>
     </br>
+        <div class="table_layout">
+            <p>正規表現の文字</p>
+            <table>
+                    <tbody><tr>
+                    <td>
+                        .
+                    </td>
+                    <td>
+                        改行を除くすべての文字
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        \d
+                    </td>
+                    <td>
+                        数字
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        \D
+                    </td>
+                    <td>
+                        数字以外の文字
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        \w
+                    </td>
+                    <td>
+                        ワード文字(「a～z」「A～Z」「0～9」 アンダーバー「_」)
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        \W
+                    </td>
+                    <td>
+                        ワード文字以外の文字
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        \s
+                    </td>
+                    <td>
+                        空白文字( スペース「 」、タブ文字「\t」、改行文字「\n, \r」など)
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        \S
+                    </td>
+                    <td>
+                        空白文字以外の文字
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        ^
+                    </td>
+                    <td>
+                        文字列の先頭
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        $
+                    </td>
+                    <td>
+                        文字列の末尾
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        \b
+                    </td>
+                    <td>
+                        ワード文字の境界
+                    </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="table_layout">
+            <p>量指定子</p>
+            <table>
+                    <tbody><tr>
+                    <td>
+                        ?
+                    </td>
+                    <td>
+                        直前の文字が0個か1個
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        *
+                    </td>
+                    <td>
+                        直前の文字が0個以上
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        +
+                    </td>
+                    <td>
+                        直前の文字が1個以上
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        {m,n}
+                    </td>
+                    <td>
+                        直前の文字がm個以上n個以下
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        {m,}
+                    </td>
+                    <td>
+                        直前の文字がm個以上
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        {0,n}
+                    </td>
+                    <td>
+                        直前の文字がn個以下
+                    </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="table_layout">
+            <p>正規表現のオプション</p>
+            <table>
+                    <tbody><tr>
+                    <td>
+                        g
+                    </td>
+                    <td>
+                        パターンマッチを繰り返す
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        s
+                    </td>
+                    <td>
+                        「.」を改行にマッチさせる
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        m
+                    </td>
+                    <td>
+                        「^」と「$」を行の先頭と末尾にマッチさせる
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        i
+                    </td>
+                    <td>
+                        大文字と小文字を区別しないでマッチさせる
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        e
+                    </td>
+                    <td>
+                        置換に式を利用する
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        x
+                    </td>
+                    <td>
+                        正規表現内のスペースを無視する
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        o
+                    </td>
+                    <td>
+                        変数展開を一度だけ行う
+                    </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="table_layout">
+            <p>その他</p>
+            <table>
+                    <tbody><tr>
+                    <td>
+                        g
+                    </td>
+                    <td>
+                        パターンマッチを繰り返す
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        s
+                    </td>
+                    <td>
+                        「.」を改行にマッチさせる
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        m
+                    </td>
+                    <td>
+                        「^」と「$」を行の先頭と末尾にマッチさせる
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        i
+                    </td>
+                    <td>
+                        大文字と小文字を区別しないでマッチさせる
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        e
+                    </td>
+                    <td>
+                        置換に式を利用する
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        x
+                    </td>
+                    <td>
+                        正規表現内のスペースを無視する
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                        o
+                    </td>
+                    <td>
+                        変数展開を一度だけ行う
+                    </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     <footer>
         <div class="fotter_address">Copy right 2019 :Kobayashi Takahiro.</div>
     </footer>
